--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,7 +20,14 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+
+  display: flex;
+  gap: 15px;
+  padding: 15px;
+  
+  
 }
+
 
 .icon {
   color: royalblue;
@@ -33,6 +40,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -48,6 +57,18 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  
+}
+
+.header {
+  font-weight: bold;
+  font-size: larger;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  gap:15px;
 }
 
 button {
@@ -66,4 +87,11 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.item1 {
+  display: flex;
+  
+  justify-content: space-between;
+  align-items: center;
 }
