--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,27 +1,39 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  
 }
 
 .card {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  display: inline;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 8px 0 8px;
+  padding: 16px 8px
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 8px 146px;
+  width: 105px;
+  margin: 0 auto;
+  
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  width: 140px;
+  padding: 8px 24px;
+  
 }
